# image-similarity-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: image_analysis.ipynb  test.ipynb
scripts/api/: app.py
scripts/processing/: create_database.py  download.py
src/lydia_image_similarity/: database.py  embedder.py
